# blog

./: README.md  codegen.ts  next.config.ts  package-lock.json  package.json
graphql/: queries.graphql
my-app/: next.config.ts
my-app/graphql/: mutations.graphql  schema.graphql
my-app/src/app/posts/[id]/: page.tsx
my-app/src/components/: PostDetail.tsx  PostForm.tsx  PostList.tsx
my-app/src/lib/: graphql-client.ts  local-storage.ts
server/: Cargo.toml  README.md
server/src/: main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/posts/[id]/: page.tsx
src/components/: PostDetail.tsx  PostForm.tsx  PostList.tsx
src/components/providers/: QueryProvider.tsx
src/lib/: local-storage.ts
